@@ -22,6 +22,7 @@
         android:orientation="vertical" />
 
     <TextView
+        android:id="@+id/otherSendersText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/HighlightedTextArea"
