@@ -1,6 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/menu_settings"
+        android:title="@string/menu_settings"/>
+    <item
         android:id="@+id/menu_share_app"
         android:icon="@drawable/ic_action_share"
         android:showAsAction="ifRoom"
@@ -8,8 +11,10 @@
     <item
         android:id="@+id/menu_license"
         android:title="@string/menu_license"/>
-<!--     <item
+    <!--
+         <item
         android:id="@+id/menu_about"
         android:title="@string/menu_about"/>
- -->
+    -->
+
 </menu>
