@@ -5,7 +5,7 @@
     <string name="title_section3">About</string>
     
     <string name="app_name">MessageCounter</string>
-    <string name="app_version">Version 2.1.28 (December 2013)</string>
+    <string name="app_version">Version 2.1.30 (December 2013)</string>
     <string name="app_desc">Message Counter displays messages inbox statistics and number of messages from each of your contacts. This project\'s source code is available at GitHub.</string>
 	<string name="app_disclaim">Disclaimer: This app is created for educational purposes and as such has no guarantee or support. Since undocumented Android APIs are used, this app may not work as expected on all devices.</string>
 	<string name="app_developer_info">Designed &amp; developed at ae labs</string>
@@ -39,8 +39,14 @@ See the License for the specific language governing permissions and
 limitations under the License.</string>
 
     <string name="str_chart_title">Top message senders</string>
-    <string name="str_other_senders">(Others) text may include messages from numbers that are not saved in your contacts which may include mobile networks or financial institutions.</string>
+    <string name="str_other_senders">Others text includes messages from numbers that are not saved in your contacts, like mobile networks or financial institutions.</string>
     
     <!-- Configuration - not to be translated -->
     <string name="play_store_url" translatable="false">https://play.google.com/store/apps/details?id=com.ae.apps.messagecounter</string>
+    
+    <!-- Strings for Preference -->
+    <string name="str_pref_messages">Messages</string>
+    <string name="str_pref_non_contact_messages">Non contact messages</string>
+    <string name="str_pref_show_non_contact_message_count">Include messages from non contacts</string>
+    <string name="str_pref_hide_non_contact_message_count">Exclude messages from non contacts</string>
 </resources>
